[package]
name = "proximity"
version = "0.1.0"
edition = "2021"
authors = ["SaCS laboratory, EPFL. Correspond with mathis[d o t]randl[a t]epfl.ch"]
description = "Experiments on approximate vector search in high-dimensional spaces"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
npyz = "0.8.3"
rand = "*"

[dev-dependencies]
quickcheck = "1.0.3"

[lib]
name = "proximity"
path = "src/lib.rs"

[[bin]]
name = "proximity-bin"
path = "src/main.rs"