[package]
name = "proximity-cache"
version = "0.1.0"
edition = "2021"
authors = ["SaCS laboratory, EPFL. Correspond with mathis[d o t]randl[a t]epfl.ch"]
description = "Experiments on approximate vector search in high-dimensional spaces"
readme = "README.md"
license-file = "LICENSE"
repository = "https://gitlab.epfl.ch/randl/proximity"

[dependencies]
npyz = "0.8.3"
rand = "0.8.5"

[dev-dependencies]
quickcheck = "1.0.3"

[lib]
name = "proximitylib"
path = "src/lib.rs"

[[bin]]
name = "proximitybin"
path = "src/main.rs"