[package]
name = "proximipy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "proximipy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.24.1", features = ["py-clone"]}
proximity-cache = { path = "../core"}
