[package]
name = "proximity-cache"
version = "0.1.1"
edition = "2021"
authors = ["SaCS laboratory, EPFL. Correspond with mathis[d o t]randl[a t]epfl.ch"]
description = "Experiments on approximate vector search in high-dimensional spaces"
readme = "../README.md"
license = "MIT"
repository = "https://gitlab.epfl.ch/randl/proximity"

[lib]
name = "proximipy"
path = "src/lib.rs"

[[bin]]
name = "proximitybin"
path = "src/main.rs"
# tests are run in lib, no use to run them again
test = false 

[dev-dependencies]
quickcheck = "1.0.3"

[dependencies]
npyz = "0.8.3"
rand = "0.9"
rand_distr = "0.5.1"
